--- a/app.json
+++ b/app.json
@@ -1,43 +1,47 @@
 {
-  "name": "سورس كوبرا الاول",
-  "description": "تنصيب سورس كوبرا الاصلي معرف قناتنا @VFF35",
-  "logo": "https://telegra.ph/file/06517a71ee7344b00faa6.jpg",
-  "keywords": [    "plugin",    "modular",    "productivity"  ],
+  "name": "cobra",
+  "description": "اهلا بك في سورس كوبرا",
+  "logo": "https://telegra.ph/file/88b0307eda38438f2eae4.jpg",
+  "keywords": ["plugin","modular","productivity"],
   "repository": "https://github.com/ERTWF/cobra",
   "website": "#TODO",
   "success_url": "#TODO",
   "env": {
     "ALIVE_NAME": {
-      "description": "ضع اسمك الذي في تليجرام",
+      "description": "هنا ضع اسم التلجرام الخاص بك",
       "value": ""
     },
     "APP_ID": {
-      "description": "ضع الايبي ايدي هنا",
+      "description": "هنا ضع الايبي ايدي الخاص بك يتكون من ارقام", 
       "value": ""
     },
     "API_HASH": {
-      "description": "ضع الايبي هاش هنا",
+      "description": "هنا ضع الايبي هاش الخاص بك يتكون من احرف و ارقام",
       "value": ""
     },
     "STRING_SESSION": {
-      "description": "ضع كود تيرمكس هنا",
+      "description": "هنا ضع كود تيرمكس الخاص بك",
       "value": ""
     },
     "TG_BOT_USERNAME": {
-      "description": " ضع معرف البوت هنا",
+      "description": "هنا ضع معرف بوتك بدون @",
       "value": ""
     },
     "TG_BOT_TOKEN": {
-      "description": "ضع توكن البوت هنا",
+      "description": "هنا ضع توكن بوتك",
       "value": ""
     },
+    "COMMAND_HAND_LER": {
+      "description": "ضع هنا رمز الأمر الذي تريدة أو اتركة كما هوة",
+      "value": "."
+    },
     "TZ": {
-      "description": " الوقت",
+      "description": "المنطقه الزمنيه من القارة الخاصه بك وعاصمه بلدك",
       "value": "Asia/Baghdad",
       "required": false
     },
     "UPSTREAM_REPO": {
-      "description": "لاتـغيره! ",
+      "description": "لاتغيرة",
       "value": "https://github.com/source56/cobra",
       "required": false
     }
